--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -1,1 +1,5 @@
-import "node_modules/foundation-sites/assets/foundation.scss"
+@import 'abstracts/variables';
+
+@import 'layouts/page';
+
+@import "node_modules/foundation-sites/assets/foundation.scss";
