--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -1,5 +1,6 @@
 @import 'abstracts/variables';
-
 @import 'layouts/page';
+@import 'components/validations';
+
 
 @import "node_modules/foundation-sites/assets/foundation.scss";
